--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -1,21 +1,30 @@
-<div *ngFor="let artist of artists">
-  <div class="card" style="width: 18rem">
-    <div class="card-header">{{ artist.name }}</div>
-    <img
-      src="artist.images[0].url"
-      class="card-img-top"
-      alt="profile picture"
-    />
-    <div class="card-body">
-      <a [routerLink]="['/overview', artist.id]">Artist Albums</a>
-      <h6>Followers:{{ artist.followers.total }}</h6>
-      <h5>
-        Genre:
-        <span class="badge badge-success" *ngFor="let genre of artist.genres">
-          {{ genre }}</span
-        >
-      </h5>
-      <a class="btn btn-primary" (click)="back()">Back</a>
+<div class="container mt-5">
+  <div class="row">
+    <div
+      class="col-lg-4 col-md-6 col-sm-12 mb-4"
+      *ngFor="let artist of artists"
+    >
+      <div class="card">
+        <div class="card-header">{{ artist.name }}</div>
+        <img
+          [src]="artist.images[0].url"
+          class="card-img-top"
+          alt="Profile Picture"
+        />
+        <div class="card-body">
+          <a [routerLink]="['/overview', artist.id]">Artist Albums</a>
+          <h6>Followers: {{ artist.followers.total }}</h6>
+          <h5>
+            Genre:
+            <span
+              class="badge text-bg-success"
+              *ngFor="let genre of artist.genres"
+              >{{ genre }}</span
+            >
+          </h5>
+          <a class="btn btn-primary" (click)="back()">Back</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
