--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,33 +1,39 @@
-<form #searchForm="ngForm" (ngSubmit)="onSubmit(searchForm)">
-  <div class="form-group">
-    <input
-      type="text"
-      class="form-control"
-      palceholder="search track here"
-      name="search"
-      [(ngModel)]="query"
-      (keyup)="searchTracks(query)"
-    />
-  </div>
-  <button class="btn btn-primary" type="submit">Search</button>
-</form>
+<div class="container mt-5">
+  <form
+    #searchForm="ngForm"
+    (ngSubmit)="onSubmit(searchForm)"
+    class="d-flex gap-2"
+  >
+    <div class="form-group flex-grow-1 mr-2">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Search track here"
+        name="search"
+        [(ngModel)]="query"
+      />
+    </div>
+    <button class="btn btn-primary rounded-2" type="submit">Search</button>
+  </form>
 
-<div *ngIf="tracks">
-  <div *ngIf="tracks.length; else noTracks">
-    <h1>Results</h1>
+  <div *ngIf="tracks?.length; else noTracks">
+    <h1 class="mt-5">Results</h1>
 
     <div class="row">
-      <div class="col-sm-4" *ngFor="let track of tracks">
-        <div class="card mt-5" style="width: 18rem">
+      <div
+        class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4"
+        *ngFor="let track of tracks"
+      >
+        <div class="card h-100">
           <div class="card-header">
-            <a [routerLink]="['tracks/', track.data.id]">{{
+            <a [routerLink]="['/tracks', track.data.id]">{{
               track.data.name
             }}</a>
           </div>
           <img
-            src="{{ track.data.albumOfTrack.coverArt.sources[0].url }}"
+            [src]="track.data.albumOfTrack.coverArt.sources[0].url"
             class="card-img-top"
-            alt="..."
+            alt="Album Cover"
           />
           <div class="card-body">
             <h6>
@@ -40,8 +46,8 @@
       </div>
     </div>
   </div>
-</div>
 
-<ng-template #noTracks>
-  <h4>oh sorry no tracks were found with the term</h4>
-</ng-template>
+  <ng-template #noTracks>
+    <h4 class="mt-5">Oh, sorry, no tracks were found with the term.</h4>
+  </ng-template>
+</div>
