--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -1,16 +1,29 @@
-<div *ngFor="let album of albums">
-  <div class="card" style="width: 18rem">
-    <img [src]="album.images[0].url" class="card-img-top" alt="..." />
-    <div class="card-body">
-      <h3>Tracks</h3>
-      <ol class="list-group list-group-flush">
-        <li class="list-group-item" *ngFor="let track of album.tracks.items">
-          <a [routerLink]="['/tracks', track.id]">
-            {{ track.name }}
-          </a>
-        </li>
-      </ol>
-      <p><a class="btn btn-primary" (click)="back()">Back</a></p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let album of albums">
+      <div class="card">
+        <img
+          [src]="album.images[0].url"
+          class="card-img-top"
+          alt="Album Cover"
+        />
+        <div class="card-body">
+          <h3>{{ album.name }}</h3>
+          <h6>Release Date: {{ album.release_date }}</h6>
+          <h5>Label: {{ album.label }}</h5>
+          <h4>Tracks</h4>
+          <ol class="list-group list-group-flush">
+            <li
+              class="list-group-item"
+              *ngFor="let track of album.tracks.items"
+            >
+              <a [routerLink]="['/tracks', track.id]">{{ track.name }}</a>
+            </li>
+          </ol>
+
+          <p><a class="btn btn-primary" (click)="back()">Back</a></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
