--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="row bg-light mb-3">
-  <div class="col-md-8">
-    <h2>Mini Spotify</h2>
+<div class="container-fluid">
+  <div class="row bg-light mb-3">
+    <div class="col-md-8">
+      <h2 style="padding: 10px">Sportify</h2>
+    </div>
   </div>
-</div>
 
-<div class="container">
   <div class="row">
     <div class="col-md-12">
       <router-outlet></router-outlet>
