--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,9 +1,16 @@
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-
-      <a class="btn btn-primary" (click)="back()">Back</a>
-    </div>
+<div class="card mb-3">
+  <img
+    [src]="'https://i.scdn.co/image/ab67616d0000b2738074d75f0e453804efcec351'"
+    class="card-img-top"
+    alt="Card image cap"
+    style="object-fit: cover; height: 200px"
+  />
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">
+      Some quick example text to build on the card title and make up the bulk of
+      the card's content.
+    </p>
+    <a href="#" class="btn btn-primary" (click)="back()">Back</a>
   </div>
-
+</div>
