--- a/src/app/tracks/tracks.component.html
+++ b/src/app/tracks/tracks.component.html
@@ -1,19 +1,25 @@
-<div *ngFor="let track of tracks">
-    <div class="card" style="width: 18rem;">
-        <img src="{{ track.album.images[1].url }}" class="card-img-top" alt="...">
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let track of tracks">
+      <div class="card">
+        <img
+          [src]="track.album.images[1].url"
+          class="card-img-top"
+          alt="Album Cover"
+        />
         <div class="card-body">
-            <h5 class="card-title">{{track.name}}</h5>
-            <audio controls class="embed-responsive-item">
-                <source src="{{ track.preview_url }}">
-            </audio>  
-            
-            <p *ngFor="let artist of track.artists">
-                <a [routerLink]="['/artists', artist.id]">
-                    {{ artist.name }}
-                </a>
-            </p>
-            <a class="btn btn-primary" (click)="back()">Back</a>
-        </div>
-    </div>
-</div>
+          <h5 class="card-title">{{ track.name }}</h5>
+          <audio controls class="w-100">
+            <source [src]="track.preview_url" />
+            Your browser does not support the audio element.
+          </audio>
 
+          <p *ngFor="let artist of track.artists">
+            <a [routerLink]="['/artists', artist.id]">{{ artist.name }}</a>
+          </p>
+          <a class="btn btn-primary" (click)="back()">Back</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
