--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -1,11 +1,12 @@
 <div class="container mt-5">
-  <div class="row">
+  <!-- Artist -->
+  <div class="row justify-content-center" *ngIf="artists && artists.length">
     <div
       class="col-lg-4 col-md-6 col-sm-12 mb-4"
       *ngFor="let artist of artists"
     >
       <div class="card">
-        <div class="card-header">{{ artist.name }}</div>
+        <h4 class="card-header">{{ artist.name }}</h4>
         <img
           [src]="artist.images[0].url"
           class="card-img-top"
@@ -16,13 +17,38 @@
           <h6>Followers: {{ artist.followers.total }}</h6>
           <h5>
             Genre:
-            <span
-              class="badge text-bg-success"
-              *ngFor="let genre of artist.genres"
-              >{{ genre }}</span
-            >
+            <ng-container *ngFor="let genre of artist.genres">
+              <span class="badge bg-success me-1">{{ genre }}</span>
+            </ng-container>
           </h5>
           <a class="btn btn-primary" (click)="back()">Back</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Shimmer -->
+  <div *ngIf="loading" class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+      <div class="card">
+        <h4 class="placeholder-glow card-header">
+          <span class="placeholder col-12"></span>
+        </h4>
+        <div class="card-img-top placeholder-glow">
+          <span class="placeholder col-12" style="height: 360px"></span>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title placeholder-glow">
+            <span class="placeholder col-7"></span>
+          </h5>
+          <p class="placeholder-glow">
+            <span class="placeholder col-6"></span>
+          </p>
+          <p class="placeholder-glow">
+            <span class="placeholder col-4"></span>
+            <span class="placeholder col-3"></span>
+            <span class="placeholder col-5"></span>
+          </p>
         </div>
       </div>
     </div>
