--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
     (ngSubmit)="onSubmit(searchForm)"
     class="d-flex gap-2"
   >
-    <div class="form-group flex-grow-1 mr-2">
+    <div class="form-group flex-grow-1">
       <input
         type="text"
         class="form-control"
@@ -16,9 +16,9 @@
     <button class="btn btn-primary rounded-2" type="submit">Search</button>
   </form>
 
-  <div *ngIf="tracks?.length; else noTracks">
+  <!-- Tracks list -->
+  <div *ngIf="tracks?.length">
     <h1 class="mt-5">Results</h1>
-
     <div class="row">
       <div
         class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4"
@@ -47,7 +47,35 @@
     </div>
   </div>
 
-  <ng-template #noTracks>
+  <!-- Shimmer -->
+  <div *ngIf="loading">
+    <h1 class="mt-5">Results</h1>
+    <div class="row">
+      <div
+        class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4"
+        *ngFor="let _ of [].constructor(10).fill(0)"
+      >
+        <div class="card h-100">
+          <div class="card-header placeholder-glow">
+            <span class="placeholder col-12"></span>
+          </div>
+          <div class="card-img-top placeholder-glow">
+            <span class="placeholder col-12" style="height: 180px"></span>
+          </div>
+          <div class="card-body">
+            <h6>
+              <p class="card-text placeholder-glow">
+                <span class="placeholder col-7"></span>
+              </p>
+            </h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- No Data -->
+  <div *ngIf="!tracks?.length && !loading">
     <h4 class="mt-5">Oh, sorry, no tracks were found with the term.</h4>
-  </ng-template>
+  </div>
 </div>
