--- a/src/app/tracks/tracks.component.html
+++ b/src/app/tracks/tracks.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <div class="row">
+  <!-- Track -->
+  <div class="row justify-content-center" *ngIf="tracks && tracks.length">
     <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let track of tracks">
       <div class="card">
         <img
@@ -13,11 +14,34 @@
             <source [src]="track.preview_url" />
             Your browser does not support the audio element.
           </audio>
-
           <p *ngFor="let artist of track.artists">
             <a [routerLink]="['/artists', artist.id]">{{ artist.name }}</a>
           </p>
           <a class="btn btn-primary" (click)="back()">Back</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Shimmer -->
+  <div *ngIf="loading" class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+      <div class="card">
+        <div class="card-img-top placeholder-glow">
+          <span class="placeholder col-12" style="height: 180px"></span>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title placeholder-glow">
+            <span class="placeholder col-7"></span>
+          </h5>
+          <audio controls class="w-100">
+            <span class="placeholder col-12" style="height: 32px"></span>
+          </audio>
+          <p class="placeholder-glow">
+            <span class="placeholder col-4"></span>
+            <span class="placeholder col-3"></span>
+            <span class="placeholder col-5"></span>
+          </p>
         </div>
       </div>
     </div>
