--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -21,7 +21,7 @@
               <a [routerLink]="['/tracks', track.id]">{{ track.name }}</a>
             </li>
           </ol>
-          <p><a class="btn btn-primary" (click)="back()">Back</a></p>
+          <p><button class="btn btn-primary" (click)="back()">Back</button></p>
         </div>
       </div>
     </div>
