--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -20,7 +20,7 @@
               <span class="badge bg-success me-1">{{ genre }}</span>
             </ng-container>
           </h5>
-          <a class="btn btn-primary" (click)="back()">Back</a>
+          <button class="btn btn-primary" (click)="back()">Back</button>
         </div>
       </div>
     </div>
