--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
-  <div class="row bg-light mb-3">
-    <div class="col-md-8">
-      <h2 style="padding: 10px">Sportify</h2>
+  <div class="row align-items-center header">
+    <div class="col-md-8 d-flex align-items-center">
+      <img src="assets/spotify.png" alt="Spotify Logo" class="logo me-2" />
+      <h2 class="brand-name">Sportify</h2>
     </div>
   </div>
 
