--- a/src/app/tracks/tracks.component.html
+++ b/src/app/tracks/tracks.component.html
@@ -17,7 +17,7 @@
           <p *ngFor="let artist of track.artists">
             <a [routerLink]="['/artists', artist.id]">{{ artist.name }}</a>
           </p>
-          <a class="btn btn-primary" (click)="back()">Back</a>
+          <button class="btn btn-primary" (click)="back()">Back</button>
         </div>
       </div>
     </div>
